feat: store deployment service name in DB